<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:clipToPadding="true"
    android:paddingStart="30dp"
    android:paddingLeft="30dp"
    android:paddingRight="10dp"
    android:textSize="18sp"
    android:textStyle="bold|italic"
    app:fontFamily="sans-serif"
    android:paddingEnd="10dp">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_person_add_black_24dp"
        android:drawableLeft="@drawable/ic_person_add_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#5EE1DCDC"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_smartphone_black_24dp"
        android:drawableLeft="@drawable/ic_smartphone_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/mobile"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#5EE1DCDC"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registrationButton"
        style="@android:style/Widget.Button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/submit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_person_add_black_24dp"
        android:drawableLeft="@drawable/ic_person_add_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#5EE1DCDC"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/spinner_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_person_add_black_24dp"
        android:drawableLeft="@drawable/ic_person_add_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#5EE1DCDC"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/age"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#5EE1DCDC"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#5EE1DCDC"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#5EE1DCDC"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_password"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/registrationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/registration_page"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/firstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />

    <Spinner
        android:id="@+id/spinner_gender"
        style="@android:style/Widget.Material.Light.Spinner.Underlined"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="#0B7E8C"
        android:overScrollMode="ifContentScrolls"
        android:popupBackground="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listheader="@android:layout/simple_list_item_1"
        tools:listitem="@layout/support_simple_spinner_dropdown_item"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>