<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bottomnavfragments.AddDependentsFragment"
    android:id="@+id/addLayout"
    android:clipToPadding="true"
    android:paddingStart="30dp"
    android:paddingLeft="30dp"
    android:paddingRight="10dp"
    android:textSize="18sp"
    android:textStyle="bold|italic"
    app:fontFamily="sans-serif">

    <EditText
        android:id="@+id/mobile_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_smartphone_green_24dp"
        android:drawableLeft="@drawable/ic_smartphone_green_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="number"
        android:textColor="#FF008080"
        android:textColorHint="#FFABD5D5"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/addDependentsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addDependentsButton"
        style="@android:style/Widget.Button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/roundedbuttongreen"
        android:hapticFeedbackEnabled="false"
        android:text="Add"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHint="#FFABD5D5"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/gender_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/gender_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/gender"
        android:inputType="textPersonName"
        android:textColor="#FF008080"
        android:textColorHint="#FFABD5D5"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/age_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/age_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/age"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#FF008080"
        android:textColorHint="#FFABD5D5"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/email_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_email_green_24dp"
        android:drawableLeft="@drawable/ic_email_green_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FF008080"
        android:textColorHint="#FFABD5D5"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/relationship_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/relationship_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Relationship"
        android:inputType="textPostalAddress"
        android:textColor="#FF008080"
        android:textColorHint="#FFABD5D5"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/mobile_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>