<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LAYOUT"
    style="@style/loginscreen"
    android:background="@drawable/bg"
    android:textSize="18sp"
    android:textStyle="bold|italic"
    app:fontFamily="sans-serif"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#5EE1DCDC"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        style="@android:style/Widget.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:drawableStart="@drawable/ic_password"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#5EE1DCDC"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitButton"
        style="@android:style/Widget.Button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginEnd="214dp"
        android:layout_marginRight="114dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/roundedbutton"
        android:ellipsize="marquee"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColorHighlight="#0E0101"
        android:textColorHint="#130202"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="148dp"
        android:autoLink="all"
        android:clickable="true"
        android:ellipsize="marquee"
        android:focusable="true"
        android:text="@string/signup_here"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="397dp"
        android:layout_height="157dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:text="@string/dont_have_an_account"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signupButton"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="359dp"
        android:layout_height="294dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/rectangle_white" />

</androidx.constraintlayout.widget.ConstraintLayout>